--- a/backup - copia - copia - copia - copia - copia - copia - copia/index.html
+++ b/backup - copia - copia - copia - copia - copia - copia - copia/index.html
@@ -13,7 +13,7 @@
   <header class="encabezado">
     <div class="marca">
       <span class="marca-icono">🗺️</span>
-      <h1>Mapa de Profesionales TDAH</h1>
+      <h1>Mapa de Profesionales</h1>
     </div>
     <div class="acciones">
       <button id="btnExportarJSON" class="btn">Exportar JSON</button>
